syntax = "proto3";

package rating;

service RatingService {
  rpc CalculateAverageRatings (RatingRequest) returns (RatingResponse) {}
}

message RatingRequest {
  string workspaceId = 1;
  string type = 2;
}

message RatingResponse {
  double wifi = 1;
  double quiet = 2;
  double power = 3;
  double cleanliness = 4;
  double taste = 5;
  double resources = 6;
  double computers = 7;
  int32 totalRatings = 8;
} 